# 2dBoltzmann

./: CMakeLists.txt  README.rst  bte_config.h.in
applications/convergence_plots/: CMakeLists.txt  convergence_plots.py  grid_transfer.hpp  input.yaml  input.yaml.py  l2errors.hpp  main.cpp  main_grid_transfer_test.cpp  main_relative_errors.cpp  main_spectral_transfer_matrix.cpp  outer_product_helper.hpp  solution_handler.hpp  spectral_transfer_matrix.hpp
applications/homogeneous/: CMakeLists.txt  main_compute_ctensor.cpp  main_compute_ctensor_vhs.cpp  main_timestep_galerkin.cpp
applications/modified_least_squares/: CMakeLists.txt  main_otf.cpp  main_otf_semi.cpp  main_periodic.cpp  main_periodic_x.cpp
applications/post_processing/: CMakeLists.txt  main-clean-parallel-io.cpp
applications/python_bindings/: test.py
applications/python_bindings/collision_tensor/: CMakeLists.txt  CTensor.C  __init__.py
applications/python_bindings/quadrature/: CMakeLists.txt  __init__.py  bquad.C
applications/python_bindings/spectral_tools/: CMakeLists.txt  LaguerreKS.C  SpectralTools.C  __init__.py
cmake/checks/: CMakeLists.txt  cpu_features.cmake
cmake/modules/: FindBoostNpy.cmake  FindCblas.cmake  FindEigen3.cmake  FindHDF5.cmake  FindMPFR.cmake  FindMetis.cmake  FindYamlCpp.cmake  LibFindMacros.cmake
doc/: CMakeLists.txt  doxycfg.in
example/: CMakeLists.txt
example/homogeneous/: gen_init.py  hom_bte.py  project_to_polar_basis.py  spectral_basis.desc  spectral_basis_test.desc
example/inhomogeneous/: bf-step004.msh  config.yaml  init_bf-step.py  run-all.sh  xdmf-add-header
helpers/: CMakeLists.txt  main_make_periodic_square_gmsh.cpp
python/pyboltz/: CMakeLists.txt  __init__.py  basis.py  bkw.py  collision_tensor.py  complex_basis.py  hermite_basis.py  initialize.py  ks_basis.py  ks_basis_plot_coeffs.py  lagrange_polynomial.py  normalized_hermite.py  observables.py  ode.py  prm_file.py  quadrature.py  real_basis.py  utility.py  velocity_field.py
scripts/: create_coefficienth5.py  extract_tensor.py  merge-restart.py  merge_tensor.py  reorder_tensor.py  sort_collision_tensor.py  write-xdmf.py
src/: CMakeLists.txt  mpreal.h
src/app/: app.hpp  app_traits.hpp
src/aux/: array_buffer.hpp  boostnpy.hpp  debug_output.hpp  eigen2hdf.hpp  exceptions.h  filtered_data_out.hpp  filtered_range.hpp  group_faces_by_normals.hpp  hash_specializations.hpp  hexify.hpp  make_complex_tensor.hpp  message.hpp  rdtsc_timer.hpp  simple_sparse_matrix.hpp  singleton.hpp  singleton_collection.hpp  tensor_helpers.hpp  timer.hpp
src/base/: csingleton.hpp  logger.hpp  numbers.hpp
src/collision_tensor/: CMakeLists.txt  collision_tensor.cpp  collision_tensor.hpp  collision_tensor_factory.hpp  collision_tensor_galerkin.cpp  collision_tensor_galerkin.hpp  collision_tensor_galerkin_base.cpp  collision_tensor_galerkin_base.hpp  collision_tensor_galerkin_sparse.hpp  collision_tensor_operator.cpp  collision_tensor_operator.hpp
src/collision_tensor/assembly/: collision_kernel.hpp  collision_tensor_exporter.hpp  ct_factory.hpp  gain.hpp  gain_cache.hpp  gain_complex.hpp  loss.hpp  scheduler.hpp
src/collision_tensor/assembly/impl/: ct_factory_maxwellian.hxx  ct_factory_vhs.hxx
src/collision_tensor/dense/: cluster_vbcrs_sparsity.hpp  collision_tensor_dense_base.cpp  collision_tensor_dense_base.hpp  collision_tensor_zlastAM.hpp  collision_tensor_zlastAM_eigen.hpp  collision_tensor_zlastAM_storage.cpp  collision_tensor_zlastAM_storage.hpp  ct_input.hpp  multi_slices_factory.hpp
src/collision_tensor/dense/storage/: multi_slice.hpp  slice.hpp  slice_memory_layout.hpp  subblock.hpp  vbcrs_sparsity.hpp
src/collision_tensor/time_stepping/: rk4.hpp
src/config/: config.yaml
src/enum/: enum.hpp
src/export/: CMakeLists.txt  data_out_hdf5.hpp  epetra_helpers.cpp  epetra_helpers.hpp  epetra_row_matrix.hpp  export_dh.hpp  export_mesh.hpp  export_vtk.hpp
src/grid/: CMakeLists.txt  dof_mapper_1d_periodic.hpp  dof_mapper_periodic.hpp  dof_mapper_periodic_distributed.hpp  face_orientation.hpp  grid_handler.hpp  grid_handler_base.hpp  grid_handler_periodic.hpp  grid_partition_linear.hpp  grid_partitioner.hpp  grid_partitioner_bc.hpp  grid_tools.cpp  grid_tools.hpp  make_graph_coloring.hpp
src/matrix/: CMakeLists.txt  system_matrix_handler.hpp  vsparsity.hpp
src/method/: abstract_method.hpp  method.hpp
src/mpfr/: import_std_math.hpp
src/post_processing/: compute_mean_value.hpp  energy.hpp  macroscopic_quantities.hpp  mass.hpp  moment_base.hpp  moments2vtk.hpp  momentum.hpp  velocity.hpp  xdmf_exporter.hpp
src/quadrature/: CMakeLists.txt  gauss_hermite_quadrature.cpp  gauss_hermite_quadrature.hpp  gauss_hermite_roots.cpp  gauss_hermite_roots.hpp  gauss_legendre_quadrature.cpp  gauss_legendre_quadrature.hpp  maxwell_quadrature.cpp  maxwell_quadrature.hpp  qgauss_legendre.hpp  qhermite.hpp  qhermitew.hpp  qmaxwell.hpp  qmaxwellw.hpp  qmidpoint.hpp  qtrapz.hpp  (+7 more)
test/H2N/: CMakeLists.txt  init_hom.py  main.cpp  main2.cpp
test/P2N/: CMakeLists.txt  main.cpp
test/collision_tensor_dense/: CMakeLists.txt  main.cpp  main_timing_sparse.cpp  main_timing_sparse_blocked.cpp  main_timing_zfirst.cpp  main_timing_zlast.cpp  main_timing_zlastAM.cpp  main_timing_zlastAMEigen.cpp  main_timing_zlast_aligned.cpp  main_timing_zlast_fma.cpp  main_vbcrs.cpp
test/collision_tensor_load_from_file/: CMakeLists.txt  main.cpp
test/gauss_hermite/: CMakeLists.txt  main.cpp
test/gtest/: CMakeLists.txt  gtest_eigenhdf.cpp  gtest_hermite_eval.cpp  gtest_lagrange_polynomial.cpp  gtest_mqeval.cpp  gtest_outflow_helper.cpp  gtest_polar2hermite.cpp  gtest_polar2nodal.cpp  gtest_quadrature.cpp  gtest_spectral_basis.cpp
test/hermite_basis/: CMakeLists.txt  main.cpp
test/maxwell_quadrature/: CMakeLists.txt  golub-welsch.py  main.cpp  main2.cpp
test/p2h_shift_h2p/: CMakeLists.txt  hermite_basis.desc  init.h5  init.py  main.cpp  main_timings.cpp  spectral_basis.desc
test/shift_hermite_1d/: CMakeLists.txt  main.cpp
test/spectral_basis/: CMakeLists.txt  main.cpp  main_filter.cpp  main_test_extract_spectral_basis.cpp
(+101 files in other folders)
